Renamed survey in surveys
